src/music-links-converter/default/objects/MusicServiceSetting__mdt/MusicServiceSetting__mdt.object-meta.xml
<CustomObject>
    <description>Stores the MusicLinksConverter bot settings</description>
    <label>Music Links Converter Bot Setting</label>
    <pluralLabel>Music Links Converter Bot Settings</pluralLabel>
</CustomObject>