src/music-links-converter/default/objects/MusicServiceSetting__mdt/fields/ApiUrl__c.field-meta.xml
<CustomField>
    <fullName>ApiUrl__c</fullName>
    <description>The music service base API endpoint</description>
    <label>API Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>