src/music-links-converter/default/objects/MusicServiceSetting__mdt/fields/AuthorizationApiUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationApiUrl__c</fullName>
    <description>The music service authorization API endpoint</description>
    <label>API Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>