src/music-links-converter/default/objects/MusicServiceSetting__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The name of the Apex class that implement the music service API</description>
    <inlineHelpText>The name of the Apex class that implement the music service API</inlineHelpText>
    <label>Service</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>