src/music-links-converter/default/objects/MusicServiceSetting__mdt/fields/ShareLinkUrl__c.field-meta.xml
<CustomField>
    <fullName>ShareLinkUrl__c</fullName>
    <description>The domain URL for the music service share link</description>
    <inlineHelpText>The domain URL for the music service share link</inlineHelpText>
    <label>Share Link Url</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>