src/music-links-converter/default/objects/MusicServiceSetting__mdt/fields/TrackRecognizer__c.field-meta.xml
<CustomField>
    <fullName>TrackRecognizer__c</fullName>
    <description>The name of the Apex class that implements recognition of a track by an URL</description>
    <inlineHelpText>The name of the Apex class that implements recognition of a track by an URL</inlineHelpText>
    <label>Track Recognizer</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>